--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -9,8 +9,7 @@
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
-        android:src="@drawable/people_1" />
+        android:layout_margin="10dp" />
 
     <TextView
         android:id="@+id/post_text_name"
@@ -42,8 +41,7 @@
         android:layout_below="@id/post_image_profile"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/text_description"
-        android:scaleType="centerCrop"
-        android:src="@drawable/splash_1" />
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/post_text_description"
