--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -25,7 +25,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/post_text_datetime"
+        android:id="@+id/post_text_posted"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/post_text_name"
@@ -35,7 +35,7 @@
         android:text="@string/text_date" />
 
     <ImageView
-        android:id="@+id/post_image_post"
+        android:id="@+id/post_image_content"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_below="@id/post_image_profile"
@@ -44,10 +44,10 @@
         android:scaleType="centerCrop" />
 
     <TextView
-        android:id="@+id/post_text_description"
+        android:id="@+id/post_text_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/post_image_post"
+        android:layout_below="@id/post_image_content"
         android:layout_margin="10dp"
         android:maxLines="4"
         android:text="@string/text_content"
@@ -57,7 +57,7 @@
         android:id="@+id/post_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/post_text_description"
+        android:layout_below="@id/post_text_content"
         android:layout_margin="4dp"
         android:orientation="horizontal">
 
